# silhouette

./: CMakeLists.txt  README  README.md
doc/: makefile  report.bib  report.tex
src/: algo.cpp  algo.h  bitmap.cpp  bitmap.h  cli.cpp  cli.h  cmd.cpp  cmd.h  except.h  io.cpp  io.h  main.cpp
